--- a/README
+++ b/README
@@ -5,10 +5,11 @@ These are config files to set up a system the way I like it.
 
 Installation
 
-  git clone git://github.com/ryanb/dotfiles ~/.dotfiles
+  git clone git://github.com/lawrencec/dotfiles ~/.dotfiles
   cd ~/.dotfiles
   rake install
-  # edit ~/.gitconfig and personalize it
+  # script will prompt for name and email address, 
+  # will default to your current settings
 
 
 Environment
