--- a/README
+++ b/README
@@ -5,6 +5,7 @@ These are config files to set up a system the way I like it.
 
 Installation
 
+  sudo port install coreutils
   git clone git://github.com/lawrencec/dotfiles ~/.dotfiles
   cd ~/.dotfiles
   rake install
