--- a/README.textile
+++ b/README.textile
@@ -5,7 +5,7 @@ These are config files to set up a system the way I like it.
 h2. Installation
 
   sudo port install coreutils &&
-  git clone git://github.com/lawrencec/dotfiles ~/.dotfiles &&
+  git clone git://github.com/lawrencecurtis/dotfiles ~/.dotfiles &&
   cd ~/.dotfiles &&
   rake install
 
